trunk/Archive2/46/a6c880467d005c/output
main.cpp:10:29: error: non-type template argument is not a constant expression
void foo(const int a = 4, A<a>); 
                            ^
1 error generated.
