trunk/Archive2/46/a6c880467d005c/main.cpp
#include <iostream>

template<const int a>
class A{ };

const int a = 4;

A<a> b;

void foo(const int a = 4, A<a>); 

int main(){ }